<resources>
    <string name="app_name">Rozkład AKAI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Opcje</string>

    <string name="my_stops">Moje Przystanki</string>

    <string name="baraniaka">Baraniaka</string>
    <string name="kornicka">Kórnicka</string>
    <string name="politechnika">Politechnika</string>

    <string name="bikes">Stacje Rowerowe PP</string>
    <string name="my_bikes">Moje Stacje Rowerowe</string>
    <string name="city_bikes">Rowery Miejske</string>
    <string name="saved_stations">Zapisane Stacje</string>
    <string name="add">Dodaj</string>
    <string name="cancel">Anuluj</string>
    <string name="stop_name">Nazwa Przystanku</string>
    <string name="successful_adding_bike_station">Dodano Stację Rowerową: </string>
    <string name="error_by_adding_bike_station">Nie udało się dodać stacji rowerowej.
        Sprawdź, czy już nie została dodana wcześniej.</string>
    <string name="successful_adding_stop">Dodano Przystanek: </string>
    <string name="error_by_adding_stop">Nie udało się dodać przystanku.
        Sprawdź czy już nie został dodany wcześniej.</string>
    <string name="stop">Przystanek</string>
    <string name="bike_station">Stacja Rowerowa</string>

    <string-array name="options">
        <item>Przystanek Tramwajowy</item>
        <item>Stacja Rowerowa</item>
    </string-array>

    <string name="manage_stops">Wybierz wyświetlane przystanki</string>
    <string name="manage_bikes">Wybierz wyświetlane stacje rowerowe</string>
    <string name="powered_by">Powered by</string>
    <string name="title_activity_trams">Wybierz Przystanki</string>
    <string name="not_saved_message">Czy napewno chcesz wyjść bez zapisywania?</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="title_activity_bikes">Wybierz Stacje Rowerowe</string>
    <string name="no_internet_connection">Brak internetu</string>
    <string name="manage_put">Wyświetlanie stacji przy Politechnice</string>
    <string name="no_places">Nie znaleziono zapisanych stacji rowerowych</string>
    <string name="missed">Niestety odjechał</string>
    <string name="ok">Ok</string>
    <string name="no_internet_connection_info">Brak internetu. Sprawdź połączenie i uruchom aplikacje ponownie.</string>
    <string name="leaves_now">Właśnie odjeżdża!</string>
    <string name="add_bike">Dodaj Stację Rowerową</string>

</resources>
