<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_politechnika"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/politechnika" />
        <item
            android:id="@+id/nav_kornicka"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/kornicka" />
        <item
            android:id="@+id/nav_baraniaka"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/baraniaka" />
        <item
            android:id="@+id/nav_bikes"
            android:icon="@drawable/ic_bike_black_24dp"
            android:title="@string/bikes" />
        <item
            android:id="@+id/nav_my_stops"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/my_stops" />

        <item
            android:id="@+id/nav_my_bikes"
            android:icon="@drawable/ic_bike_black_24dp"
            android:title="@string/my_bikes" />

    </group>


</menu>
